adicionei um botao

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="img">
         <img class="logo" src="img/ESPORTES-DA-SORTE-1.png" alt="logo" />
         <img class="icons" src="img/presente.png" alt="icons" />
+        <button class="registrar">Registrar</button>
       </div>
     </div>
     <div class="login">
